# RMNAlexanderInRaylib

./: .gitignore  CMakeLists.txt  app.h  main.cpp  worm.cpp  worm.h
ECS/: coordinator.h  ecsDefinitions.h
ECS/Core/: ComponentArray.cpp  ComponentArray.h  System.h
ECS/Managers/: ComponentManager.cpp  ComponentManager.h  EntityManager.cpp  EntityManager.h  SystemManager.cpp  SystemManager.h
ECSaustinMorlan/: baseApp.h  component.cpp  components.h  ecsCoordinator.cpp  ecsCoordinator.h  system.cpp
Simulation/Components/: WindowData.h
Simulation/Systems/: WindowSystem.cpp  WindowSystem.h
WormApp/Data/: WindowSpecification.h
WormApp/Systems/: WindowSystem.cpp  WindowSystem.h
include/: ECSDefs.h  WindowSpecification.h  WindowSystem.h  componentManager.h  components.h  ecsCoordinator.h  entity.h  event.h  system.h
main/: main.cpp
src/: WindowSystem.cpp  componentManager.cpp  components.cpp  entity.cpp  event.cpp  main.cpp
step0/: helloKinematics.cpp
